BUG#16798: Merge into 5.0: s/used_tables()/!const_item()/, added comment about its effects.